Added Table and Form elements.  Sucessfully concluded with the introductory HTML segment.

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,25 +7,105 @@
 </head>
 
 <body>
-  <img src="images\profile.png" alt="michael profile picture">
-  <h1>Michael Mavely</h1>
-  <p><em>2B Computer Science undergraduate at the
-    <strong>
-      <a href="https://uwaterloo.ca/math/">University of Waterloo</a>
-      </strong>
-    </em>
-  </p>
-  <p>
-    Hi, my name is Michael Mavely and I am a Software Developer.  Currently,
-    I am in my undergraduate program for Computer Science at the University
-    of Waterloo.  I am experienced in several languages, including but not
-    limited to: Python, HTML, CSS, JS, C++, C#, R.
-  </p>
+  <table cellspacing = "20">
+    <tr>
+      <td><img src="images\profile.png" alt="michael profile picture"></td>
+      <td><h1>Michael Mavely</h1>
+      <p><em>2B Computer Science undergraduate at the
+        <strong>
+          <a href="https://uwaterloo.ca/math/">University of Waterloo</a>
+          </strong>
+        </em>
+      </p>
+      <p>
+        Hi, my name is Michael Mavely and I am a Software Developer.  Currently,
+        I am in my undergraduate program for Computer Science at the University
+        of Waterloo.  I am experienced in several languages, including but not
+        limited to: Python, HTML, CSS, JS, C++, C#, R.
+      </p></td>
+    </tr>
+  </table>
   <hr>
   <h3>Education</h3>
   <ul>
     <li>Bachelor of Computer Science at the University of Waterloo 2019-2024 (current)</li>
   </ul>
+
+  <hr>
+
+  <h3>Work Experience</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2015-2019</td>
+        <td>Assistant Instructor at Pro Martial Arts</td>
+      </tr>
+        <td>2019</td>
+        <td>Online Learning Assistant at the University of Waterloo</td>
+      <tr>
+
+      </tr>
+    </tbody>
+    <tfoot>
+    </tfoot>
+  </table>
+
+  <hr>
+
+  <h3>Skills</h3>
+
+  <table border = "1">
+    <tr>
+      <td>
+        <table cellspacing = "10">
+          <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>C</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>R</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Unity3D</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table cellspacing = "10">
+          <tr>
+            <td>Web Development</td>
+            <td>⭐⭐</td>
+          </tr>
+          <tr>
+            <td>C++</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Git</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Martial Arts</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
+  <hr>
   <a href="hobbies.html">My Hobbies</a> <br>
   <a href="contact.html">Contact Info</a>
 
