--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -13,8 +13,16 @@
     <strong>Phone Number</strong> : 647-551-0103 <br>
     <strong><a href="https://github.com/mgmavely">GitHub</a></strong> <br>
     <strong><a href="https://www.linkedin.com/in/michael-mavely-7012781a0/">LinkedIn</a></strong>
-
   </p>
-
+  <hr>
+  <form action="mailto:mgmmavely@gmail.com" method="post" enctype="text/plain">
+    <label for="">Your Name:</label>
+    <input type="text" name="yourName"> <br>
+    <label for="">Your Email:</label>
+    <input type="email" name="yourEmail"> <br>
+    <label for="">Your Message:</label> <br>
+    <textarea name="yourMessage" id="" cols="30" rows="10"></textarea> <br>
+    <input type="submit" name="" id="">
+  </form>
 </body>
 </html>
