Finished first draft of CSS applied portfolio site

--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -7,21 +7,62 @@
   <title>Michael Mavely</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top-container">
-    <img src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud"src="images/cloud.png" alt="cloud-img">
     <h1>I'm Michael</h1>
-    <p>a software developer</p>
-    <img src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
-  </div>
+    <h2 class="subtitle">a software developer</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+</div>
+
   <div class="middle-container">
-
+    <div class="profile">
+      <img src="images/profile.png" alt="michael-mavely-png">
+      <h2>Hello.</h2>
+      <p class="intro-text">I am a 2A-Computer Science student at the University of Waterloo.
+        I love Toronto sports teams and I'm a new father of a 4 year old cat named Othello.
+      </p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="icon-top" src="images/coding.png" alt="coding-img">
+        <h3>Design & Development</h3>
+        <p>Well versed in a game and web development.
+          I am experienced in a variety of programing languages such as:
+          Python, C++, C#, C, HTML, CSS, JS, and R.  I
+          am aiming to futher my abilities by improving and expanding my fluency in languages.
+        </p>
+      </div>
+      <div class="skill-row">
+        <img class="icon-bottom" src="images/tkd.png" alt="martial-arts-img">
+        <h3>Communication & Leadership</h3>
+        <p>Worked as an Assistant Instructor at Pro Martial Arts and Fitness Center for 5 years.
+          Gained leadership and communication skills throughout.
+          Experienced working with a wide variety of clients of different age groups and backgrounds.
+        </p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2 class="closing">Get In Touch</h2>
+      <h3 class="closing">If you're interested in my portfolio.</h3>
+      <p class="closing">Looking for an aspiring software developer with sound coding fundamentals?  Feel free to contact me via email below!.</p>
+      <a class="contact-me-btn" href="mailto:mmavely@uwaterloo.ca">CONTACT ME</a>
+    </div>
   </div>
-  <div class="bottom-container">
 
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/michael-mavely-7012781a0/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/mgmavely">GitHub</a>
+    <a class="footer-link" href="https://www.michaelmavely.com">Website</a>
+    <p class="credits">© 2021 Michael Mavely.</p>
   </div>
 
 </body>
