2nd day of Bootstrap project'

--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -46,11 +46,11 @@
       <div class="row">
         <div class="col-lg-6 col-md-12 col-sm-12">
           <h1 class="intro-text">Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-dark btn-lg dl-btn"><i class="fab fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg dl-btn"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+          <img src="images/iphone6.png" alt="iphone-mockup" class="title-image">
         </div>
       </div>
     </div>
@@ -60,16 +60,25 @@
   <!-- Features -->
 
   <section id="features">
-
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 col-md-12 col-sm-12 ft">
+          <i class="fas fa-check-circle feature-icons"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 ft">
+          <i class="fas fa-bullseye feature-icons"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 ft">
+          <i class="fas fa-heart feature-icons"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+  </div>
   </section>
 
 
